<resources>
    <string name="app_name">Hydroponic-farm</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="wellcome">Welcome!</string>
    <string name="sign_in">Sign In</string>
    <string name="large_text">Hydro Farmm!</string>
    <string name="create_an_account">Create a account</string>
    <string name="todo">TODO</string>
    <string name="login_failed_network">Network error, please try again later.</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login_Activity</string>
</resources>