<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    android:background="#22333B"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:scaleType="centerCrop"
            android:background="#40DF9F"
            android:padding="3dp"
            android:backgroundTint="#40df9f"
            android:src="@drawable/logo"
            android:contentDescription="@string/todo">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/wellcome"
        android:fontFamily="@font/sfprodisplay_bold"
        android:id="@+id/welcome"
        android:textColor="#ffffff"
        android:textSize="42sp">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/welcome"
        android:textSize="27sp"
        android:fontFamily="@font/sfprodisplay_regular"
        android:layout_marginStart="30dp"
        android:layout_marginTop="5dp"
        android:textColor="#96A7AF"
        android:id="@+id/signin"
        android:text="@string/sign_in_to_continue">
    </TextView>

    <androidx.cardview.widget.CardView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/usericon"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/signin"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop"
            android:background="#625B39"
            android:padding="3dp"
            android:contentDescription="@string/username"
            android:backgroundTint="#625B39"
            android:src="@drawable/ic_baseline_person_24">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/passwordicon"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/usericon"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:scaleType="centerCrop"
            android:background="#623A42"
            android:padding="5dp"
            android:contentDescription="@string/password"
            android:backgroundTint="#623A42"
            android:src="@drawable/ic_baseline_lock_24">
        </ImageView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="#636465"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/usericon"
        android:id="@+id/username_edit">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:autofillHints="@string/username"
            android:selectAllOnFocus="true"
            android:textColor="#0B0A0A"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_edit"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:passwordToggleTint="#797A7A"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/passwordicon"
        android:textColorHint="#636465"
        app:passwordToggleEnabled="true"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:autofillHints="@string/password"
            android:textColor="#050505">
        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#4CAF50"
        android:enabled="false"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:fontFamily="@font/sfprodisplay_bold"
        android:textStyle="bold"
        android:layout_below="@id/password_edit"
        app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_24"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forget"
        android:layout_marginRight="30dp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:textColor="#96A7AF"
        android:layout_below="@id/login"
        android:text="@string/forget_password">
    </TextView>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="174dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/newAccountButton"
        android:layout_width="352dp"
        android:layout_height="65dp"
        android:layout_below="@id/forget"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="#499E82"
        android:fontFamily="@font/sfprodisplay_bold"
        android:text="create account"
        android:textColor="#050505" />


</RelativeLayout>